--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p> this is new repo this is india beautyful culture and tradition </p>
-<p>mugal garden open two times in a year </p>
+<p>mugal garden open two times in a year(button) </p>
 <p>aqi in delhin is high</p>
